--- a/_index.html
+++ b/_index.html
@@ -113,8 +113,8 @@
 						</a>
 					</div>
 					<div class="c-nav__item">
-						<a href="planner.html" class="c-nav__link c-nav__link--button">
-							planner 
+						<a href="mailto:hello@geckotree.co.uk" class="c-nav__link c-nav__link--button">
+							contact 
 							<svg class="u-icon u-icon--feather">
 	                            <use xlink:href="#icon--feather"></use>
 	                        </svg>
@@ -261,6 +261,7 @@
 
 		<div class="u-icons">@@icons</div>
 		<!-- @todo figure out why this isnt getting merged into main -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="assets/js/libs/modernizr.js"></script>
 		<script src="assets/build/js/main.js"></script>
 		<script>@@googleAnalytics</script>
