old style styles

--- a/adspy.html
+++ b/adspy.html
@@ -137,7 +137,7 @@
 	<div class="o-page-heading__row o-wrap o-wrap--x-large">
 		<div class="o-page-heading__content">
 			<h1 class="o-page-heading__heading">OnlineAdSpy</h1>
-			<strong class="o-page-heading__meta u-highlight-text u-intro">Branding, Illustration, Website</strong>
+			<strong class="o-page-heading__meta u-intro">Branding, Illustration, Website</strong>
 
 			<div class="o-page-heading__description u-intro">
 				<p>We’re Rob and Kev – a small team of freelance creatives based in the UK.</p>
