--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 ---
 title: We design and build websites
 class: s-home
+headerData: true
 layout: home
 ---
 
-<header class="c-hero c-hero--cover">
+<header class="c-hero c-hero--neutral c-hero--cover">
 	<div class="c-hero__row o-section o-wrap o-wrap--x-large">
 		<div class="c-hero__content">
 			<h1 class="c-hero__heading u-giga">We design <span class="u-wrap-large">&amp; build <span class="u-highlight-text-neutral">websites</span></span></h1>
