--- a/src/about/index.html
+++ b/src/about/index.html
@@ -7,7 +7,7 @@ layout: master
 <header class="c-hero">
 	<div class="c-hero__row o-section o-wrap o-wrap--x-large">
 		<div class="c-hero__content">
-			<h1 class="c-hero__heading">About</h1>
+			<h1 class="c-hero__heading u-mega">About</h1>
 
 			<div class="c-hero__description u-intro">
 				<p>Stop searching for the best technology companies in the Dallas/Fort Worth area, when you sign up we’ll send you our comprehensive list.</p>
