--- a/src/planner/index.html
+++ b/src/planner/index.html
@@ -1,13 +1,15 @@
 ---
 title: Planner
 class: s-planner
-layout: master
+headerClass: c-header--colour
+headerData: false
+layout: home
 ---
 
 <header class="c-hero">
 	<div class="c-hero__row o-section o-wrap o-wrap--x-large">
 		<div class="c-hero__content">
-			<h1 class="c-hero__heading">Planner</h1>
+			<h1 class="c-hero__heading u-mega">Planner</h1>
 
 			<div class="c-hero__description u-intro">
 				<p>Stop searching for the best technology companies in the Dallas/Fort Worth area, when you sign up we’ll send you our comprehensive list.</p>
@@ -237,7 +239,7 @@ layout: master
 			<textarea name="about" id="gko-about-project" class="o-textarea" cols="30" rows="8" placeholder="This will include examples of the kind of things we're looking for in a project overview." required></textarea>
 		</div>
 
-		<div class="o-form__field">
+		<div class="o-form__field u-center-content">
 			<button class="c-button c-button--primary" data-module="SvgButton" type="submit">
 				<span class="c-button__morph-shape" data-morph-active="M282.5,62.5c0,27.891-17.583,50.176-46.5,53.5c-21.75,2.5-64.355,4-86,4c-21.645,0-65-1-86-4c-29.408-4.201-46.5-25.609-46.5-53.5l0,0C17.5,34.609,36.594,13.177,64,8c22.5-4.25,64.355-4,86-4c21.645,0,64.669,1.31,86,4C263.75,11.5,282.5,34.609,282.5,62.5L282.5,62.5z">
 					<svg width="100%" height="100%" viewBox="0 0 300 125" preserveAspectRatio="none">
