--- a/src/work/index.html
+++ b/src/work/index.html
@@ -1,13 +1,14 @@
 ---
 title: Featured case studies
 class: s-work
+headerData: true
 layout: master
 ---
 
-<header class="c-hero">
+<header class="c-hero c-hero--neutral">
 	<div class="c-hero__row o-section o-wrap o-wrap--x-large">
 		<div class="c-hero__content">
-			<h1 class="c-hero__heading">OnlineAdSpy</h1>
+			<h1 class="c-hero__heading u-mega">OnlineAdSpy</h1>
 			<strong class="c-hero__meta u-intro">Branding, Illustration, Website</strong>
 
 			<div class="c-hero__description u-intro">
@@ -15,7 +16,7 @@ layout: master
 			</div>
 
 			<div class="c-hero__cta">
-				<a href="/work" class="c-button c-button--primary-neutral" data-module="SvgButton">
+				<a href="{{ "/work/onlineadspy" | prepend: site.baseurl }}" class="c-button c-button--primary-neutral" data-module="SvgButton">
 					<span class="c-button__morph-shape" data-morph-active="M282.5,62.5c0,27.891-17.583,50.176-46.5,53.5c-21.75,2.5-64.355,4-86,4c-21.645,0-65-1-86-4c-29.408-4.201-46.5-25.609-46.5-53.5l0,0C17.5,34.609,36.594,13.177,64,8c22.5-4.25,64.355-4,86-4c21.645,0,64.669,1.31,86,4C263.75,11.5,282.5,34.609,282.5,62.5L282.5,62.5z">
 						<svg width="100%" height="100%" viewBox="0 0 300 125" preserveAspectRatio="none">
 							<path d="M286.5,62.5c0,27.891-22.609,50.5-50.5,50.5c-21.5,0-64.355,0-86,0c-21.645,0-64.5,0-86,0c-27.891,0-50.5-22.609-50.5-50.5l0,0C13.5,34.609,36.109,12,64,12c21.5,0,64.355,0,86,0c21.645,0,64.5,0,86,0C263.891,12,286.5,34.609,286.5,62.5L286.5,62.5z"/>
@@ -33,14 +34,14 @@ layout: master
 	</div>
 </header>
 
-<section class="o-section">
+<section class="o-section o-section--neutral">
 	<header class="o-section__header o-section__header--center">
 		<div class="o-wrap o-wrap--large">
 			<h2 class="o-section__header__heading">What we're <span class="u-highlight-text">working on</span></h2>
 		</div>
 	</header>
 
-	<div class="o-wrap o-wrap--x-large c-dribbble-shots" data-module="Inview">
+	<div class="o-wrap o-wrap--x-large c-dribbble-shots">
 		<div class="c-dribbble-shots__row" data-module="DribbbleShots">
 			<article class="c-dribbble-shots__col js-dribbble-col">
 				<figure class="c-dribbble-shots__figure js-dribbble-figure"></figure>
